Project cleanup & optimisation